--- a/now-ui-dashboard-master/assets/css2/ceberus.css
+++ b/now-ui-dashboard-master/assets/css2/ceberus.css
@@ -2,7 +2,7 @@ body {
     background: #222d32;
     font-family: "Roboto", sans-serif;
   }
-  
+  /*CSS LOGIN*/
   .login-box {
     margin-top: 75px;
     height: auto;
@@ -125,3 +125,130 @@ body {
   .loginbttm {
     padding: 0px;
   }
+
+
+/*CSS MAPA*/
+
+
+.card-body  {
+
+  background: rgba(128, 127, 127, 0.336);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  --default-blue-stroke: #0098ff;
+  --default-grey-black-fill: #525252;
+  --default-strok: rgb(255, 249, 249);
+}
+
+svg text {
+  fill: var(--default-strok);
+  font-family: monospace;
+  font-weight: bolder;
+}
+
+.mapa-svg-estados {
+  fill: #373737;
+  -webkit-transition: .8s ease;
+  -moz-transition: .8s ease;
+  -ms-transition: .8s ease;
+  -o-transition: .8s ease;
+  transition: .8s ease;
+  stroke-dasharray: 180%;
+  stroke-dashoffset: -120%;
+  stroke-width: 2px;
+  stroke: var(--default-strok);
+}
+
+.mapa-svg-estados text {
+  stroke: none
+}
+
+.mapa-svg-estados:hover {
+  cursor: pointer;
+  fill: var(--default-grey-black-fill);
+
+}
+
+.mapa-svg-estados-active {
+  cursor: pointer;
+  stroke: var(--default-blue-stroke);
+  fill: var(--default-grey-black-fill);
+  stroke-dashoffset: 0%;
+  -webkit-transition: .8s ease;
+  -moz-transition: .8s ease;
+  -ms-transition: .8s ease;
+  -o-transition: .8s ease;
+}
+
+.mapa-svg-estados-active text {
+  stroke: none;
+}
+
+.pointer-svg-map {
+  fill: var(--default-blue-stroke);
+  animation-direction: normal;
+  animation-delay: .3s;
+}
+
+.inactive-map-svg {
+  opacity: .5;
+  stroke: none !important;
+}
+
+.inactive-map-svg:hover {
+  stroke-dashoffset: -120%;
+  cursor: inherit;
+  fill: var(--default-grey-black-fill);
+}
+
+@keyframes pointer {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+#sotreq-select {
+  display: flex;
+  flex-direction: column;
+}
+
+.class-select {
+  outline: none;
+  height: 40px;
+  width: 250px;
+  padding: 10px 18px;
+  border-radius: 32px;
+  color: #3c3c3c;
+  margin-bottom: 2rem;
+}
+
+/*Div Informação*/
+
+#DivOculta{
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+#DivOculta button{
+  
+    position: relative;
+    border:none;
+    padding: 15px;
+    box-shadow: 0 5px 15px -5px rgba(#FCCF31, 0.8);
+    background-color: #fefefe;
+    border-radius: 5px;
+    cursor: pointer;
+    overflow: hidden;
+  
+ 
+  
+}
